welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:2: error: ';' expected but '(' found.
T:Array[Color](getMondeHauteur())
              ^